--- a/views/comocomprar.html
+++ b/views/comocomprar.html
@@ -23,11 +23,11 @@
      </div>
      <nav>
        <ul>
-         <li> <a href="/index.html"><h2>Home</h2></a>
+         <li> <a href="index.html"><h2>Home</h2></a>
            
          </li>
-          <li> <a href="/views/nosotros.html" > <h2>nosotros</h2></a>
-            <li><a href="/views/preguntas.html"><h2>Preguntas Frecuentes</h2></a>  </li>
+          <li> <a href="views/nosotros.html" > <h2>nosotros</h2></a>
+            <li><a href="views/preguntas.html"><h2>Preguntas Frecuentes</h2></a>  </li>
           
           
           
@@ -69,9 +69,9 @@
    <footer>
     <div class="ayuda">
       <h5> Ayuda </h5>
-      <a href="/views/comocomprar.html"><p>Como comprar</p></a>
+      <a href="views/comocomprar.html"><p>Como comprar</p></a>
    
-      <a href="/views/privacidad.html"><p>privacidad </p></a>
+      <a href="views/privacidad.html"><p>privacidad </p></a>
 
 
 
