--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -22,11 +22,11 @@
 
      <nav>
        <ul>
-         <li> <a href="/index.html"><h2>Home</h2></a>
+         <li> <a href="index.html"><h2>Home</h2></a>
            
          </li>
        
-          <li><a href="/views/preguntas.html"><h2>Preguntas Frecuentes</h2> </a></li>
+          <li><a href="views/preguntas.html"><h2>Preguntas Frecuentes</h2> </a></li>
 
 
 
@@ -93,9 +93,9 @@
     <footer>
       <div class="ayuda">
         <h5> Ayuda </h5>
-        <a href="/views/comocomprar.html"><p>Como comprar</p></a>
+        <a href="views/comocomprar.html"><p>Como comprar</p></a>
      
-        <a href="/views/privacidad.html"><p>privacidad </p></a>
+        <a href="views/privacidad.html"><p>privacidad </p></a>
   
   
   
