--- a/views/preguntas.html
+++ b/views/preguntas.html
@@ -22,10 +22,10 @@
    </div>
    <nav>
      <ul>
-       <li> <a href="/index.html"><h2 class="nos">Home</h2></a>
+       <li> <a href="index.html"><h2 class="nos">Home</h2></a>
          
        </li>
-        <li> <a href="/views/nosotros.html" > <h2 class="nos">nosotros</h2></a>
+        <li> <a href="views/nosotros.html" > <h2 class="nos">nosotros</h2></a>
         
         
         
@@ -98,9 +98,9 @@
  <footer>
   <div class="ayuda">
     <h5> Ayuda </h5>
-    <a href="/views/comocomprar.html"><p>Como comprar</p></a>
+    <a href="views/comocomprar.html"><p>Como comprar</p></a>
  
-    <a href="/views/privacidad.html"><p>privacidad </p></a>
+    <a href="views/privacidad.html"><p>privacidad </p></a>
 
 
 
